disable manual configs, use ENV juce location

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "utility": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "__bits": "cpp"
+        "__bits": "cpp",
+        "map": "cpp"
     }
 }
