--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.0.1",
     "configurations": [
         {
-            "name": "Build & Debug Sandbox",
+            "name": "Debug Sandbox",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/LumatoneSandbox_artefacts/Debug/Lumatone Sandbox App.app/Contents/MacOS/Lumatone Sandbox App",
@@ -11,7 +11,6 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "preLaunchTask": "build debug",
             "MIMode": "lldb"
         }
     ]
