--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ target_link_libraries(LumatoneSandbox
         juce::juce_gui_extra
         juce::juce_audio_utils
         juce::juce_audio_devices
+        juce::juce_opengl
+
     PUBLIC
         juce::juce_recommended_config_flags
         juce::juce_recommended_lto_flags
